--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,22 +5,17 @@
   <head>
 
     <meta charset="utf-8">
-
+  
   </head>
 
   <body>
 
-    <h1>Odin Recipes</h1>
+    <h1>Lasagna</h1>
 
-    <a href="recipes/lasagna.html">Lasagna</a>
-
+    <a href="../index.html">Home</a>
 
 
   </body>
-
-
-
-
 
 
 
