--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -12,7 +12,7 @@
 
     <h1>Apple Pie</h1>
 
-    <img src="" alt="">
+    <img src="../images/apple-pie.jpg" alt="Apple Pie, with an apple by the side.">
 
     <h2>Description</h2>
 
