--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -12,7 +12,7 @@
 
     <h1>Grilled Cheese</h1>
 
-    <img src="" alt="">
+    <img src="../images/grilled-cheese.jpg" alt="A grilled cheese in a frying pan almost done.">
 
     <h2>Description</h2>
 
