Complete the Apple Pie Ingredients and Steps

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -16,17 +16,18 @@
 
     <h2>Description</h2>
 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi possimus optio repellat. Placeat qui voluptatem magni repudiandae odit sapiente numquam quidem! Eius tempora autem amet deleniti minus expedita necessitatibus similique!<br>
+    Everyone needs to know how to make a classic grilled cheese sandwich.<br>
     <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius veritatis voluptatibus numquam! Similique earum assumenda nihil harum, maiores quidem quo quisquam nostrum explicabo eos vel, quod repellendus nisi cumque ratione? 
+    Whether you're a beginner cook or an old pro, you'll come back to this top-rated grilled cheese recipe <em>again and again</em>.
 
 
     <h2>Ingredients</h2>
 
     <ul>
-      <li>-</li>
-      <li>-</li>
-      <li>-</li>
+      <li>4 slices white bread</li>
+      <li>3 tablespoons butter, divided</li>
+      <li>2 slices Cheddar cheese</li>
+    </ul>
 
       <h2>Steps</h2>
 
