Add each recipe page link to a <li> element

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <ul>
 
-      <a href="recipes/lasagna.html">Lasagna</a>
-      <a href="recipes/grilled-cheese.html">Grilled Cheese</a>
-      <a href="recipes/apple-pie.html">Apple Pie</a>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
+      <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
 
 
     </ul>
